--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,35118],[],[[5,0,0,[6],[1,335,15192],[]],[7,0,0,[6],[1,15529,19587],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,26060],[],[[4,0,0,[],[1,398,25660],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Consulta Petz","*C:\\Users\\Particular\\PycharmProjects\\133petsRobotFrameWork\\consulta_petz.robot","*consulta_petz.robot","*<p>Consultas no site da Petz\x3c/p>","*Consulta Produto com Clique na Lupa","*rapido","*Consulta Produto Apertando Enter"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Teste Cadastro Stella","*C:\\Users\\Particular\\PycharmProjects\\133petsRobotFrameWork\\teste_cadastro_stella.robot","*teste_cadastro_stella.robot","*Cadastro Positivo"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:35","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:35","fail":0,"label":"rapido","pass":2,"skip":0}],[{"elapsed":"00:00:35","fail":0,"id":"s1","label":"Consulta Petz","name":"Consulta Petz","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Teste Cadastro Stella","name":"Teste Cadastro Stella","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1652139687421;
+window.output["baseMillis"] = 1653096366376;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 35137;
+window.output["generated"] = 26086;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
