--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,26060],[],[[4,0,0,[],[1,398,25660],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,47851],[],[[4,0,0,[],[1,397,18229],[]],[5,0,0,[],[1,18628,12232],[]],[6,0,0,[],[1,30862,16987],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Teste Cadastro Stella","*C:\\Users\\Particular\\PycharmProjects\\133petsRobotFrameWork\\teste_cadastro_stella.robot","*teste_cadastro_stella.robot","*Cadastro Positivo"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Teste Cadastro Stella","*C:\\Users\\Particular\\PycharmProjects\\133petsRobotFrameWork\\teste_cadastro_stella.robot","*teste_cadastro_stella.robot","*CENARIO 1 - Cadastro Positivo","*CENARIO 2 - Cadastro Negativo - Usuário existente","*CENARIO 3 - Cadastro Negativo - Dados incorretos"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Teste Cadastro Stella","name":"Teste Cadastro Stella","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:47","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"Teste Cadastro Stella","name":"Teste Cadastro Stella","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1653096366376;
+window.output["baseMillis"] = 1653100294185;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 26086;
+window.output["generated"] = 47882;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
